10/9/25:

- Map API items to cards
- Set up Items with API call
- Set home to default page
- Implement basic nav bar
- Install and set up basic router
- Basic component folders and files set up

10/6/25:

- General set up
- Reduce gif file size