@@ -1,11 +1,16 @@
 // App.jsx
 
-import Home from "./home/Home.jsx";
+import { useState } from "react";
+import { Outlet } from "react-router";
+import Navigation from "./navigation/Navigation";
 
 const App = () => {
+  const [cartArray, setCartArray] = useState([]);
+  
   return (
     <div>
-      <Home />
+      <Navigation cartCount={cartArray.length} />
+      <Outlet context={{ cartArray, setCartArray }} />
     </div>
   );
 };
