@@ -1,11 +1,8 @@
 // Cart.jsx
 
-import Navigation from "../navigation/Navigation.jsx";
-
 const Cart = () => {
     return (
         <div>
-            <Navigation />
             <h1>Hello from cart page!</h1>
         </div>
     );
